@@ -292,24 +292,40 @@ system.time(D3 <- sapply(r, function(rho) Matrix:::ldet3.dsC(mtm + (1/rho) * I))
 stopifnot(is.all.equal3(D1,D2,D3, tol = 1e-13))
 
 ## Updating LL'  should remain LL' and not become  LDL' :
-##_ R CMD check is giving a false positive warning, if use if(FALSE) {..}
+cholCheck <- function(Ut, tol = 1e-12, super = FALSE, LDL = !super) {
+    L <- Cholesky(UtU <- tcrossprod(Ut), super=super, LDL=LDL, Imult = 1)
+    L1 <- update(L, UtU, mult = 1)
+    L2 <- update(L, Ut,  mult = 1)
+    stopifnot(is.all.equal3(L, L1, L2, tol = tol),
+              all.equal(update(L, UtU, mult = pi),
+                        update(L, Ut,  mult = pi), tol = tol)
+              )
+}
+
+## Inspired by
 ## data(Dyestuff, package = "lme4")
 ## Zt <- as(Dyestuff$Batch, "sparseMatrix")
-Zt <- new("dgCMatrix", Dim = c(6L, 30L), x = rep(1, 30),
+Zt <- new("dgCMatrix", Dim = c(6L, 30L), x = 2*1:30,
           i = rep(0:5, each=5),
           p = 0:30, Dimnames = list(LETTERS[1:6], NULL))
-Ut <- 0.78 * Zt
-L <- Cholesky(UtU <- tcrossprod(Ut), LDL = FALSE, Imult = 1)
-L1 <- update(L, UtU, mult = 1)
-rr <- tryCatch.W.E(update(L, as(UtU,"generalMatrix"), mult = 1))
-stopifnot(is(rr[["warning"]], "warning"),
-          is.all.equal3(L, L1, rr$value, tol = 1e-14))
+cholCheck(0.78 * Zt, tol=1e-14)
 
-## TODO: (--> ../TODO "Cholesky"): make *also* use of the possibility to update
-## ----   with non-symmetric A  and then  AA' + mult * I is considered
-.updateCHMfactor  ## allows that
-## similarly, allow Cholesky(A,..) when A is not symmetric *AND*
-##           we really want to factorize  AA' ( + beta * I)
+for(i in 1:120) {
+    set.seed(i); cat(sprintf("%3d: ", i))
+    M <- rspMat(n=rpois(1,50), m=rpois(1,20), density = 1/(4*rpois(1, 4)))
+    for(super in c(FALSE,TRUE)) {
+        cat("super=",super," M: ")
+        cholCheck( M  , super=super); cat(" M': ")
+        cholCheck(t(M), super=super)
+    }
+    cat(" [Ok]\n")
+}
+
+.updateCHMfactor
+## TODO: (--> ../TODO "Cholesky"):
+## ----
+## allow Cholesky(A,..) when A is not symmetric *AND*
+## we really want to factorize  AA' ( + beta * I)
 
 
 ## Schur() ----------------------
